fix mobile contact info in footer from overflowing

--- a/css/sass/media_queries/_media_queries.scss
+++ b/css/sass/media_queries/_media_queries.scss
@@ -128,8 +128,9 @@
         }
     }
     .contact-info {
-        left: 20px; 
+        left: 20px;
         margin-bottom: 20px;
+        position: static;
     }
     .copyright {
         display: block;
